basic grpc integration between the frontend and articles api

--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -5,7 +5,7 @@ all: dockerbuild dockerpush
 dockerpush:
 	docker push frouioui/tagenal-frontend-service:latest
 
-dockerbuild:
+dockerbuild: clientproto
 	docker build . -t frouioui/tagenal-frontend-service:latest
 
 build:
