--- a/kubernetes/frontend/frontend.yaml
+++ b/kubernetes/frontend/frontend.yaml
@@ -11,15 +11,41 @@ spec:
     matchLabels:
       app: tagenal-frontend
   replicas: 1
+  strategy:
+    rollingUpdate:
+      maxSurge: 100%
+      maxUnavailable: 0
+    type: RollingUpdate
+  revisionHistoryLimit: 5
+  progressDeadlineSeconds: 240
   template:
     metadata:
       labels:
         app: tagenal-frontend
+      annotations:
+        kubernetes.io/change-cause: "Addition of liveness and readiness probes"
     spec:
       containers:
         - name: tagenal-frontend
           image: frouioui/tagenal-frontend-service:latest
           imagePullPolicy: Always
+          livenessProbe:
+              httpGet:
+                path: /health
+                port: 8888
+              initialDelaySeconds: 5
+              periodSeconds: 10
+              timeoutSeconds: 1
+              failureThreshold: 3
+          readinessProbe:
+              httpGet:
+                path: /ready
+                port: 8888
+              initialDelaySeconds: 2
+              periodSeconds: 2
+              timeoutSeconds: 2
+              failureThreshold: 3
+              successThreshold: 1
           resources:
             requests:
               cpu: 100m
